# spm_management

lib/Transforms/: CMakeLists.txt
lib/Transforms/CodeMnmt/: CodeMnmt.cpp
lib/Transforms/CodeMnmtHelper/: CMakeLists.txt  ExecTrace.cpp  FuncInfo.cpp  Overlay.cpp  run.sh
lib/Transforms/MappingOpt/: CMakeLists.txt  FuncType.cpp  Makefile  MappingOpt.cpp  OptSize.cpp  Overlay.cpp  Overlay.h  run.sh
lib/Transforms/SMMCommon/: CMakeLists.txt  Helper.cpp  Helper.h  Makefile  SMMProglog.cpp  UserCode.cpp  UserGlobal.cpp  UserHeap.cpp  UserStack.cpp
lib/Transforms/SmartStackMnmt/: CMakeLists.txt  Main.cpp  Makefile  Mnmt.cpp  Mnmt.h
lib/Transforms/Test/: Test.cpp
