add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(Coroutines)
add_subdirectory(Test)
add_subdirectory(MappingOpt)
add_subdirectory(CodeMnmtHelper)
add_subdirectory(CodeMnmt)
add_subdirectory(SmartStackMnmt)
add_subdirectory(SMMCommon)
